# demo-edge-detect

./: .gitignore  GEMINI.md  Project Report.md  README.md
docs/: Roadmap.md
inference/: go.mod  go.sum  main.go
training/: check_gpu.py  export.py  pyproject.toml  test_tensor.py  train.py
